[gd_scene load_steps=18 format=3 uid="uid://cmqxl1bbh5aan"]

[ext_resource type="Script" path="res://Player/player.gd" id="1_7od70"]
[ext_resource type="Texture2D" uid="uid://cn78vqpt15bmy" path="res://Textures/Player/player_sprite.png" id="1_tncmp"]
[ext_resource type="PackedScene" uid="uid://cf5vg00eiiml1" path="res://Utility/hurt_box.tscn" id="3_2gqde"]
[ext_resource type="Texture2D" uid="uid://cwwtbq6a6rduy" path="res://Textures/GUI/exp_background.png" id="4_xqaek"]
[ext_resource type="Texture2D" uid="uid://bnciv5sxbajtk" path="res://Textures/GUI/exp_progress.png" id="5_kkcaj"]
[ext_resource type="FontFile" uid="uid://bm3i5odnir43l" path="res://Font/tenderness.otf" id="6_52402"]
[ext_resource type="AudioStream" uid="uid://d3j4kr7v8bn4x" path="res://Audio/SoundEffect/levelup.ogg" id="7_j28be"]
[ext_resource type="Texture2D" uid="uid://t4csomxpsym2" path="res://Textures/GUI/healthbar.png" id="8_xp8ft"]
[ext_resource type="Texture2D" uid="uid://dyjkpii7mq0w6" path="res://Textures/GUI/health.png" id="9_qeh8e"]
[ext_resource type="AudioStream" uid="uid://5bobfiyfu2nd" path="res://Audio/SoundEffect/Victory.wav" id="10_4g3wj"]
[ext_resource type="AudioStream" uid="uid://cf5v715jerucv" path="res://Audio/SoundEffect/Lose.ogg" id="11_kj44m"]
[ext_resource type="PackedScene" uid="uid://lynlxyffijqg" path="res://Utility/basic_button.tscn" id="12_p667h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1byp1"]
radius = 4.0
height = 24.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30vcb"]
size = Vector2(10, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_0jf1i"]
radius = 379.858

[sub_resource type="CircleShape2D" id="CircleShape2D_j5tif"]
radius = 50.0

[sub_resource type="CircleShape2D" id="CircleShape2D_64qon"]
radius = 14.21

[node name="Player" type="CharacterBody2D" groups=["player"]]
motion_mode = 1
script = ExtResource("1_7od70")

[node name="Sprite2D" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_tncmp")
hframes = 2

[node name="Camera2D" type="Camera2D" parent="."]

[node name="PlayerCollision" type="CollisionShape2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, 2)
shape = SubResource("CapsuleShape2D_1byp1")

[node name="walkTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true

[node name="HurtBox" parent="." instance=ExtResource("3_2gqde")]
collision_mask = 2

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2(1, 1.5)
shape = SubResource("RectangleShape2D_30vcb")

[node name="Attack" type="Node2D" parent="."]
show_behind_parent = true

[node name="IceSpearTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 1.5

[node name="IceSpearAttackTimer" type="Timer" parent="Attack/IceSpearTimer"]
unique_name_in_owner = true
wait_time = 0.075

[node name="TornadoTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 3.0

[node name="TornadoAttackTimer" type="Timer" parent="Attack/TornadoTimer"]
unique_name_in_owner = true
wait_time = 0.2

[node name="JavelinBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="DiscBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true
show_behind_parent = true

[node name="FireBallTimer" type="Timer" parent="Attack"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[node name="FireBallWaitTimer" type="Timer" parent="Attack/FireBallTimer"]
unique_name_in_owner = true
wait_time = 5.0
one_shot = true

[node name="FireBallBase" type="Node2D" parent="Attack"]
unique_name_in_owner = true

[node name="EnemyDetectionArea" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetectionArea"]
shape = SubResource("CircleShape2D_0jf1i")

[node name="GrabArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="GrabAreaCollision" type="CollisionShape2D" parent="GrabArea"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_j5tif")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_64qon")

[node name="GUILayer" type="CanvasLayer" parent="."]

[node name="GUI" type="Control" parent="GUILayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0

[node name="ExperienceBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_under = ExtResource("4_xqaek")
texture_progress = ExtResource("5_kkcaj")

[node name="label_level" type="Label" parent="GUILayer/GUI/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 540.0
offset_right = 640.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("6_52402")
theme_override_font_sizes/font_size = 16
text = "Level: 1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="HealthBar" type="TextureProgressBar" parent="GUILayer/GUI"]
unique_name_in_owner = true
self_modulate = Color(1, 1, 1, 0.392157)
layout_mode = 0
offset_left = 304.0
offset_top = 200.0
offset_right = 336.0
offset_bottom = 208.0
value = 50.0
texture_over = ExtResource("8_xp8ft")
texture_progress = ExtResource("9_qeh8e")

[node name="LevelUp" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
visible = false
layout_mode = 0
offset_left = 800.0
offset_top = 50.0
offset_right = 1000.0
offset_bottom = 300.0

[node name="label_levelup" type="Label" parent="GUILayer/GUI/LevelUp"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_52402")
text = "Level Up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeOptions" type="VBoxContainer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 10.0
offset_top = 50.0
offset_right = 190.0
offset_bottom = 100.0

[node name="sound_levelup" type="AudioStreamPlayer" parent="GUILayer/GUI/LevelUp"]
unique_name_in_owner = true
stream = ExtResource("7_j28be")
volume_db = -10.0

[node name="DeathPanel" type="Panel" parent="GUILayer/GUI"]
unique_name_in_owner = true
process_mode = 2
layout_mode = 0
offset_left = 220.0
offset_top = -263.0
offset_right = 420.0
offset_bottom = -13.0

[node name="label_Result" type="Label" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 200.0
offset_bottom = 50.0
theme_override_fonts/font = ExtResource("6_52402")
text = "Result"
horizontal_alignment = 1
vertical_alignment = 1
justification_flags = 131

[node name="sound_victory" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("10_4g3wj")
volume_db = -10.0

[node name="sound_lose" type="AudioStreamPlayer" parent="GUILayer/GUI/DeathPanel"]
unique_name_in_owner = true
stream = ExtResource("11_kj44m")
volume_db = -10.0

[node name="button_menu" parent="GUILayer/GUI/DeathPanel" instance=ExtResource("12_p667h")]
layout_mode = 0
offset_left = 60.0
offset_top = 200.0
offset_right = 140.0
offset_bottom = 230.0
text = "Menu
"

[node name="LabelTimer" type="Label" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 280.0
offset_top = 20.0
offset_right = 360.0
offset_bottom = 44.0
theme_override_fonts/font = ExtResource("6_52402")
theme_override_font_sizes/font_size = 20
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollectedWeapons" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 24.0
offset_right = 208.0
offset_bottom = 40.0
columns = 10

[node name="CollectedUpgrades" type="GridContainer" parent="GUILayer/GUI"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 40.0
offset_right = 208.0
offset_bottom = 56.0
columns = 10

[node name="InvincibilityTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="InvincibilityCooldown" type="Timer" parent="InvincibilityTimer"]
unique_name_in_owner = true
wait_time = 15.0
one_shot = true

[connection signal="hurt" from="HurtBox" to="." method="_on_hurt_box_hurt"]
[connection signal="timeout" from="Attack/IceSpearTimer" to="." method="_on_ice_spear_timer_timeout"]
[connection signal="timeout" from="Attack/IceSpearTimer/IceSpearAttackTimer" to="." method="_on_ice_spear_attack_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer" to="." method="_on_tornado_timer_timeout"]
[connection signal="timeout" from="Attack/TornadoTimer/TornadoAttackTimer" to="." method="_on_tornado_attack_timer_timeout"]
[connection signal="timeout" from="Attack/FireBallTimer" to="." method="_on_fire_ball_timer_timeout"]
[connection signal="timeout" from="Attack/FireBallTimer/FireBallWaitTimer" to="." method="_on_fire_ball_wait_timer_timeout"]
[connection signal="body_entered" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_entered"]
[connection signal="body_exited" from="EnemyDetectionArea" to="." method="_on_enemy_detection_area_body_exited"]
[connection signal="area_entered" from="GrabArea" to="." method="_on_grab_area_area_entered"]
[connection signal="area_entered" from="CollectArea" to="." method="_on_collect_area_area_entered"]
[connection signal="click_end" from="GUILayer/GUI/DeathPanel/button_menu" to="." method="_on_button_menu_click_end"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="InvincibilityTimer/InvincibilityCooldown" to="." method="_on_invincibility_cooldown_timeout"]

[editable path="HurtBox"]
